[package]
name = "rm"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
rpassword = "7.4.0"
sha2 = "0.10"
hex = "0.4"
glob = "0.3"
sysinfo = "0.29"
lettre = { version = "0.11", features = ["smtp-transport", "builder", "serde"] }
rand = "0.8"
anyhow = "1.0"
# linker = "gcc"

[profile.dev]
rust-version = "nightly"
